--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "parcel serve src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +14,7 @@
     "d3": "^5.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
+    "parcel": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.3.1"
   }
 }
